# eco_namecard

./: .coderabbit.yaml  .env.example  .flake8  .gitignore  .pr_agent.toml  BUGFIX_SUMMARY.md  CARD_PROCESSOR_TEST_SUMMARY.md  CHANGELOG.md  CHANGES_COMPARISON.md  CLAUDE.md  CLOUDFLARE_RECOMMENDATION.md  CLOUDFLARE_SETUP_GUIDE.md  CLOUDFLARE_TESTING_PLAN.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_TEST_COVERAGE_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_TRIGGER.md  DEPLOY_CHECKLIST.md  Dockerfile  GITHUB_SECRETS.md  GITHUB_SETUP.md  IMPROVEMENTS_SUMMARY.md  INTERN_TUTORIAL.md  LICENSE  MAINTENANCE.md  ONBOARDING_CLIENT.md  Procfile  QUICK_REFERENCE.md  QUICK_SETUP.md  README.md  REDIS_SETUP.md  REFACTORING_LOG.md  SENTRY_DASHBOARD_PREVIEW.md  SENTRY_EVALUATION.md  SENTRY_MCP_SETUP.md  SENTRY_SETUP_GUIDE.md  SENTRY_TEST_COMPLETE_SUMMARY.md  ZEABUR_ACCESS_GUIDE.md  ZEABUR_CLOUDFLARE_SETUP.md  (+33 more)
.github/workflows/: deploy.yml  pr_agent.yml
.specify/: README.md  SETUP_COMPLETE.md
.specify/memory/: constitution.md
.specify/scripts/: check-prerequisites.sh  common.sh  create-new-feature.sh
.specify/specs/current-system/: plan.md  spec.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
data/: schema.sql
src/: __init__.py
src/namecard/: __init__.py
src/namecard/api/: __init__.py
src/namecard/core/: __init__.py  exceptions.py  version.py
src/namecard/infrastructure/: __init__.py  redis_client.py
static/admin/css/: style.css
templates/admin/: dashboard.html  layout.html  login.html
templates/admin/plans/: list.html
templates/admin/tenants/: form.html  list.html  stats.html
tests/: conftest.py  test_app.py  test_card_models.py  test_card_processor.py  test_card_processor_comprehensive.py  test_card_processor_integration.py  test_commercialization.py  test_flex_templates.py  test_health.py  test_image_processing_e2e.py  test_image_storage.py  test_image_upload_worker.py  test_line_bot_main.py  test_notion_client.py  test_notion_client_extended.py  test_notion_connection.py  test_security_service.py  test_security_service_extended.py  test_simple_config.py  test_user_service.py
(+30 files in other folders)
